bloquear input de copy page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
             <input type="text" name="upper" id="upper" onkeyup="return validate_upper( this )" placeholder="Ingrese un texto" class="form-control">
         </div>
     </div>
+
+    <!--Bloquear Copiar y Pegar-->
+    <div class="row mar-top">
+        <div class="col-md-4">
+            <span><b>Bloquear Copy/Page</b></span>
+            <input type="text" name="block" id="block" class="form-control b-copy-page" placeholder="No podras copiar ni pegar">
+        </div>
+    </div>
 </section>
 
 
